<resources>
    <string name="app_name">HiddenEyePro</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="contact_me">Contact Me</string>
    <string name="about_me">About Me</string>
    <string name="how_to_use">How to Use</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="yash_p_shah">Yash P Shah</string>
    <string name="github_link">www.github.com/shahyash1993</string>
    <string name="linkedin_link">www.linkedin.com/in/shahyash1993/</string>
    <string name="myMobileNo">+1 (619) 416-4464</string>
    <string name="myWorkNo">+1 (619) 416-4464</string>
    <string name="myEmailID">ypshah.13@gmail.com</string>

    <string-array name="sensitivity_array">
        <item>Highest</item>
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
        <item>Lowest</item>
    </string-array>

    <string-array name="counter_array">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>13 seconds</item>
        <item>15 seconds</item>
        <item>20 seconds</item>
    </string-array>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="go_back_to_login">Go Back To Login</string>
    <string name="create_account_signup">No Account? Signup</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="gallery">Gallery</string>
    <string name="suspicious_images">Suspicious Images</string>
    <string name="welcome">Welcome</string>
    <string name="theft_detection">Theft Detection</string>
    <string name="sensitivity">Sensitivity:</string>
    <string name="counter">Counter:</string>
</resources>
